<resources>
    <string name="app_name">Fitorto</string>
    <string name="action_settings">Settings</string>
    <string name="follow_btn">+Follow</string>
    <string name="facebook_app_id">1608994799390664</string>
    <string name="feed_empty_text">Start Following your friends and fitness centers to get daily feeds.</string>

    <string name="discover_empty_text">No Data found</string>
    <string name="search_hint">Search friends here.</string>
    <string name="hint_prompt">Speak friend name.</string>
    <string name="profile_empty_view">Login to view your profile.</string>
    <string name="gym_empty_view">No Fitness centers found.</string>
    <string name="my_feed_empty_text">No feed found. Use Pencil button to write some feed.</string>
    <string name="empty_friend">Find your friends here.</string>
    <string name="txt_fees">PRICE</string>
    <string name="empty_text">No Data Found</string>
    <string name="notification_empty_text">No notification found.</string>
    <string name="notification_activity">Notification</string>
    <string name="txt_intro_1">Connect with your Fitness centers.</string>
    <string name="txt_intro_2">Track your Fitness with Fitorto.</string>
    <string name="section_format">Page %1$d</string>
    <string name="action_email_id">Email address</string>
    <string name="action_password">Password</string>
    <string name="action_txt_login">Login</string>
    <string name="error_invalid_password">Invalide password</string>
    <string name="error_field_required">This Field Required.</string>
    <string name="error_invalid_email">Invalide Email Id</string>
    <string name="action_confirm_password">Confirm Password</string>
    <string name="action_txt_signup">Sign Up</string>
    <string name="action_user_name">Name</string>
    <string name="error_pass_does_not_matched">Password does not matched.</string>
    <string name="action_action_phone">Mobile Number</string>
    <string name="error_invalid_phone">Invalide Mobile Number</string>
    <string name="activity_image_trans">feed_transition</string>
    <string name="search_transition">Follower_transition</string>
    <string name="profile_transition">profile_transiton</string>
    <string name="filter_transition">filter transition</string>
    <string name="text_label_apply">Apply</string>
    <string name="txt_package">Select Package</string>
    <string name="txt_price">Select Duration</string>

    <string-array name="package_months">
        <item>One Month</item>
        <item>Three Month</item>
        <item>Six Month</item>
        <item>Yearly</item>
    </string-array>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string-array name="selectAction">
        <item>Resend OTP</item>
        <item>Enter OTP Manually</item>
    </string-array>

    <string-array name="selectGender">
        <item>Male</item>
        <item>Female</item>
        <item>Not Specified</item>
    </string-array>
    <string name="title_activity_initial">CCAvenueMobile</string>
    <string name="title_activity_web_view">WebViewActivity</string>
    <string name="pay_button">Pay</string>
    <string name="merchant_id">Merchant Id</string>
    <string name="currency">Currency</string>
    <string name="amount">Amount</string>
    <string name="redirect_url">Redirect Url</string>
    <string name="cancel_url">Cancel Url</string>
    <string name="rsa_url">RSA Key Url</string>
    <string name="access_code">Access Code</string>
    <string name="title_activity_status">CCAvenueMobile</string>
    <string name="action_status">Status</string>
    <string name="txt_current_status">Your Current Status</string>
    <string name="txt_gender">Select Gender</string>
    <string name="txt_redeem">Redeem</string>
    <string name="txt_redeem_msg">Your Request is sent to your fitness center. Please contact your fitness center.</string>
    <string name="action_reference">Referral Reward</string>
    <string name="filter_activity">Filter</string>
    <string name="action_invite">Invite Friends</string>
    <string name="txt_hint_current_pwd">Type your current password</string>
    <string name="txt_hint_new_pwd">Type your new password</string>
    <string name="txt_hint_retype_pwd">Retype your new password</string>
</resources>
